# bonus

bonus/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bonus/bonus_service/app/: containers.py  providers.py
bonus/bonus_service/app/adapters/api/: main.py
bonus/bonus_service/app/adapters/config/: rules.yaml
bonus/bonus_service/app/application/: bonus_service.py
bonus/bonus_service/app/core/: datetime_utils.py
bonus/bonus_service/app/domain/: models.py  rules.py
